--- a/unidade_3/projeto.ipynb
+++ b/unidade_3/projeto.ipynb
@@ -11,6 +11,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  dataset.csv.zip\n",
+      "  inflating: dataset.csv             \n"
+     ]
+    }
+   ],
+   "source": [
+    "!unzip dataset.csv.zip"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
